service(profile): add minimal rpc methods
